apps/plex/service.yaml
# INTERNAL Service - accessible via ingress
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
    dns.service-controller.io/enabled: "true"
    dns.service-controller.io/hostname: "plex.ganam.app"
    exposure.service-controller.io/type: "internal"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 32400
      protocol: TCP
  selector:
    app: plex
